[FIX] Show PHP Errors button: 5styles/layout/design.css font size was unreadable (if it was on purpose, please explain)
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@44955 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/design.css
+++ b/styles/layout/design.css
@@ -3870,9 +3870,6 @@ textarea.tshoutbox{
 	list-style: none;
 }
 
-/* Button from 'Show php error messages' hidden box */
-.button[id="show-errors-button"]{font-size:5%;}
-
 /* admin boxes etc (.admbox) now defined in css/admin.css */
 
 .mods_revision {
